
   * "Builder" wizard, tied into the fragments subsystem.

   * Protein side-chain rotamer wizard.

   * "Tinker" wizard 

   * Save dialog for objects/selections

Impending Changes

   * Reimplementation of the Settings subsystem to support object-
   specific settings, direct access to setting from Python, and
   complete browsing and access to internal settings from a GUI.

   * Tuning-up of the Tk-based GUI

   * Saving and restoring matrix, center, origin, zoom, clip

Changes up to 0.50

   * TAB-activated filename and command completion (CTRL-D too)

   * former TAB functionality moved to ESC (text/graphics toggle)

   * Auto-detection of stereo capability

   * Robust Feedback control mechanism

   * Eliminated hangs and crashes upon program termination with Win2k/NT.
   
   * "Distances" wizard (internal gui;replace with external version later)

   * "Pair Fit" wizard (internal gui; replace with external version later)

   * Mesh objects now have states, and new meshes are appended.

   * Modified raytrace antialiasing transfer function to improve sharpness.

   * Created alias and extend commands so that python scripts can extend the
   pymol language on the fly.

   * Additional test cases.

   * Parser improved with a new argument parsing subsystem which has a
   better mapping to standard Python arguments.  This has significant
   potential to break existing code if there are any bugs, but I am
   shooting for 100% backwards compatibility. 

Changes up to 0.49

   * Improved editor, hydrogens now auto-deleted.

   * Visible selections.

   * Default mouse actions changed for editing and atom selecting.

   * Callback objects (for use with PyOpenGL) now have extents.

   * get_state and get_frame API functions

Important Changes 0.42-0.48

   Too numerous to list them all...
   
   * Addition of support for PyOpenGL-based GL calls with callback objects

   * Wizard feature, for grabbing mouse input -- still needs flushing out.
